--- a/templates/mobile/base.html
+++ b/templates/mobile/base.html
@@ -11,114 +11,12 @@
 </head>
 <body>
 
-<div data-role="page" id="beranda">
+<div data-role="page">
 
         {% include "mobile/header.html" %}
 	
 	<div data-role="content">
-	     <div data-role="collapsible-set" data-theme="c" data-content-theme="d">
-		<div data-role="collapsible">
-			<h3>Sedang Berjalan</h3>
-			<ul data-role="listview" data-split-icon="gear" data-split-theme="d" data-inset="true">
-				<li><a href="#">
-					<h2>Broken Bells</h2>
-					<p>Broken Bells</p></a>
-					<a href="#purchase" data-rel="popup" data-position-to="window" data-transition="pop">Purchase album</a>
-				</li>
-			</ul>
-			<div data-role="popup" id="purchase" data-theme="d" data-overlay-theme="b" class="ui-content" style="max-width:340px; padding-bottom:2em;">
-				<h3>Tundah unduhan</h3>
-				<p>Anda yakin </p>
-				<a href="index.html" data-role="button" data-rel="back" data-theme="b" data-icon="check" data-inline="true" data-mini="true">Buy: $10.99</a>
-				<a href="index.html" data-role="button" data-rel="back" data-inline="true" data-mini="true">Cancel</a>
-			</div>
-		</div>
-		<div data-role="collapsible">
-			<h3>Menunggu</h3>
-			<p>I'm the collapsible content for section 2</p>
-		</div>
-		<div data-role="collapsible">
-			<h3>Selesai</h3>
-			<ul data-role="listview" data-split-icon="gear" data-split-theme="d" data-inset="true">
-				{% for file in stops %}
-				<li><a href="#">
-					<h2>{{ file.namafile }}</h2>
-					<p>Broken Bells</p></a>
-					<a href="#pop_selesai" data-rel="popup" data-position-to="window" data-transition="pop">Purchase album</a>
-				</li>
-				{% endfor %}
-			</ul>
-			<div data-role="popup" id="pop_selesai" data-theme="d" data-overlay-theme="b" class="ui-content" style="max-width:340px; padding-bottom:2em;">
-				<h3>Tundah unduhan</h3>
-				<p>Anda yakin akan menunda unduhan ini ? </p>
-				<a href="index.html" data-role="button" data-rel="back" data-theme="a" data-inline="true" data-mini="true">Ok</a>
-				<a href="index.html" data-role="button" data-rel="back" data-inline="true" data-mini="true">Batal</a>
-			</div>
-		</div>
-	</div><!-- /content -->
-
-	{% include "mobile/footer.html" %}
-</div><!-- /page -->
-
-<div data-role="page" id="tambah">
-
-        {% include "mobile/header.html" %}
-
-	<div data-role="content">
-		<form>
-                    <div data-role="fieldcontain">
-                        <label for="url-1">Url unduhan</label>
-                        <input data-clear-btn="true" name="url" id="url" value="" type="url">
-                    </div>
-                    <div data-role="fieldcontain">
-                        <label for="select-native-17">Unduhan bersamaan</label>
-                        <select name="select-native-17" id="select-native-17">
-                            <option value="5" selected=selected >Lima</option>
-                            <option value="10">Sepuluh</option>
-                            <option value="20">Dua Puluh</option>
-                            <option value="30">Tiga Puluh</option>
-                        </select>                    
-                    </div>
-                    <input type="submit" value="Unduh" data-theme="b"/>
-                </form>
-	</div><!-- /content -->
-
-	{% include "mobile/footer.html" %}
-</div>
-
-<div data-role="page" id="tentang">
-
-	<div data-role="header">
-            {% include "mobile/header.html" %}
-	</div><!-- /header -->
-
-	<div data-role="content">
-	    <table data-role="table" id="movie-table" data-mode="reflow" class="ui-responsive table-stroke">
-  <thead>
-    <tr>
-      <th data-priority="persist">Keterangan</th>
-      <th data-priority="1">Nilai</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>Unduhan berjalan</th>
-      <td>74</td>
-    </tr>
-    <tr>
-      <th>Unduhan menunggu</th>
-      <td>74</td>
-    </tr>
-    <tr>
-      <th>Unduhan selesai</th>
-      <td>74</td>
-    </tr>
-    <tr>
-      <th>Total kecepatan</th>
-      <td>74</td>
-    </tr>
-  </tbody>
-</table>
+		{% block content %}{% endblock %}
 	</div><!-- /content -->
 
 	
