--- a/templates/mobile/header.html
+++ b/templates/mobile/header.html
@@ -14,9 +14,9 @@
     </div>
     <div data-role="navbar">
 		<ul>
-			<li><a href="#beranda" data-icon="home">Beranda</a></li>
-                        <li><a href="#tambah" data-icon="plus">Tambah</a></li>
-                        <li><a href="#tentang" data-icon="grid">Statistik</a></li>
+			<li><a href="{% url mobile_index %}" data-icon="home">Beranda</a></li>
+                        <li><a href="{% url mobile_tambah %}" data-icon="plus">Tambah</a></li>
+                        <li><a href="{% url mobile_tentang %}" data-icon="grid">Statistik</a></li>
 		</ul>
 	</div><!-- /navbar -->
 </div>
