--- a/templates/base.html
+++ b/templates/base.html
@@ -1,91 +1,73 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<meta charset="utf-8"/>
-	<title>Aria 2 Web Console</title>
-	
-	<link rel="stylesheet" href="/static/css/layout.css" type="text/css" media="screen" />
-	<!--[if lt IE 9]>
-	<link rel="stylesheet" href="/static/css/ie.css" type="text/css" media="screen" />
-	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
-	<script src="/static/js/jquery-1.5.2.min.js" type="text/javascript"></script>
-	<script src="/static/js/hideshow.js" type="text/javascript"></script>
-	<script src="/static/js/jquery.tablesorter.min.js" type="text/javascript"></script>
-	<script type="text/javascript" src="/static/js/jquery.equalHeight.js"></script>
-	<script type="text/javascript">
-	$(document).ready(function() 
-    	{ 
-      	  $(".tablesorter").tablesorter(); 
-   	 } 
-	);
-	$(document).ready(function() {
+		<meta charset="utf-8">
+		<title>Parkir file anda disini</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="">
+		<meta name="author" content="">
+		<link href="/static/css/bootstrap.min.css" rel="stylesheet">
+		<link href="/static/css/style.css" rel="stylesheet">
+		<link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
+		<!--[if lt IE 9]>
+		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
 
-	//When page loads...
-	$(".tab_content").hide(); //Hide all content
-	$("ul.tabs li:first").addClass("active").show(); //Activate first tab
-	$(".tab_content:first").show(); //Show first tab content
+		<!-- Le fav and touch icons -->
+		<link rel="shortcut icon" href="/static/ico/favicon.png">
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/ico/apple-touch-icon-114-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/ico/apple-touch-icon-72-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" href="/static/ico/apple-touch-icon-57-precomposed.png">
+	</head>
 
-	//On Click Event
-	$("ul.tabs li").click(function() {
-
-		$("ul.tabs li").removeClass("active"); //Remove any "active" class
-		$(this).addClass("active"); //Add "active" class to selected tab
-		$(".tab_content").hide(); //Hide all tab content
-
-		var activeTab = $(this).find("a").attr("href"); //Find the href attribute value to identify the active tab + content
-		$(activeTab).fadeIn(); //Fade in the active ID content
-		return false;
-	});
-
-});
-    </script>
-    <script type="text/javascript">
-    $(function(){
-        $('.column').equalHeight();
-    });
-</script>
-
-</head>
-
-
-<body>
-
-	<header id="header">
-		<hgroup>
-			<h1 class="site_title"><a href="/">Titip Download</a></h1>
-			<h2 class="section_title">Dashboard</h2><div class="btn_view_site"></div>
-		</hgroup>
-	</header> <!-- end of header bar -->
-	
-	<section id="secondary_bar">
-		<div class="user">
-			<p></p>
+	<body>
+		<div class="navbar navbar-fixed-top">
+			<div class="navbar-inner">
+				<div class="container">
+					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </a>
+					<a class="brand" href="/">Nitip Unduh</a>
+					<div class="nav-collapse">
+						{% include "menu.html" %}
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="breadcrumbs_container">
+
+		<div class="container">
+			<div class="row-fluid">
+				<div class="span12">
+					<div class="page-header">
+						<h3>Dashboard</h3>
+					</div>
+					<div class="row-fluid">
+						{% block main %}{% endblock %}
+					</div>
+				</div>
+			</div>
+
+			<hr/>
+			<footer>
+				<p>
+					Put Your Copyright Here &copy; 2012
+				</p>
+			</footer>
+
 		</div>
-	</section><!-- end of secondary bar -->
-	
-	<aside id="sidebar" class="column">
-		<h3>Unduhan</h3>
-		<ul>
-			<li class="icn_edit_article"><a href="/">Daftar Unduhan</a></li>
-			<li class="icn_new_article"><a href="/download/tambah">Unduhan Baru</a></li>
-			<li class="icn_tags"><a href="/download/tentang">Tentang Saya</a></li>
-		</ul>
-		<footer>
-			<hr />
-			<p><strong>Copyright &copy; 2013 <a href="http://o-leafs.com">Oleafs Integrasi Mandiri</strong></p>
-			<p>Theme by <a href="http://www.medialoot.com">MediaLoot</a></p>
-		</footer>
-	</aside><!-- end of sidebar -->
-	
-	<section id="main" class="column">
-	{% block main %}{% endblock %}
-	</section>
+		<script src="/static/js/jquery.js"></script>
+		<script src="/static/js/bootstrap-transition.js"></script>
+		<script src="/static/js/bootstrap-alert.js"></script>
+		<script src="/static/js/bootstrap-modal.js"></script>
+		<script src="/static/js/bootstrap-dropdown.js"></script>
+		<script src="/static/js/bootstrap-scrollspy.js"></script>
+		<script src="/static/js/bootstrap-tab.js"></script>
+		<script src="/static/js/bootstrap-tooltip.js"></script>
+		<script src="/static/js/bootstrap-popover.js"></script>
+		<script src="/static/js/bootstrap-button.js"></script>
+		<script src="/static/js/bootstrap-collapse.js"></script>
+		<script src="/static/js/bootstrap-carousel.js"></script>
+		<script src="/static/js/bootstrap-typeahead.js"></script>
+		<script src="/static/js/custom.js"></script>
+	</body>
 
-
-</body>
-
+<!-- Mirrored from wbpreview.com/previews/WB0087188/dash.html by HTTrack Website Copier/3.x [XR&CO'2010], Sun, 21 Apr 2013 17:31:11 GMT -->
 </html>
