--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
 		          }    
 		     }
 		</script>
-		<h3>Unduh berjalan</h3>
+		<h3>Unduhan berjalan</h3>
 		<div class="well">
 		<table class="table table-striped table-bordered ">
 		     <thead>
@@ -114,7 +114,7 @@
 		<div class="modal hide fade" id="myModal">
 			<div class="modal-header">
 				<a class="close" data-dismiss="modal">&times;</a>
-				<h3>Modal Dialog</h3>
+				<h3>Tambah unduhan anda</h3>
 			</div>
 			<div class="modal-body">
 				<p>
