--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,7 @@
 			</div>
 			<div class="modal-body">
 				<p>
-			    <form action="{% url tambah %}" method="POST" class="well form-horizontal">
+			    <form action="{% url 'tambah' %}" method="POST" class="well form-horizontal">
 			    <fieldset>
 			    {% csrf_token %}
 			    <div class="control-group">
