--- a/templates/login.html
+++ b/templates/login.html
@@ -56,7 +56,7 @@
 			</form>
 			Put Your Copyright Here &copy; 2012
 			<div class="pull-right">
-				<a href="{% url daftar %}">Sign In</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="#">Need Help</a>
+				<a href="{% url 'daftar' %}">Sign In</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="#">Need Help</a>
 			</div>
 		</div>
 		<!-- Le javascript ================================================== -->
